tests/runtime/invalid/exports.wit
invalid-u8: func()
invalid-s8: func()
invalid-u16: func()
invalid-s16: func()
invalid-char: func()
invalid-bool: func()
invalid-enum: func()
invalid-handle: func()
invalid-handle-close: func()
